# global_state

./: CMakeLists.txt  README.md  main.c
context/: CMakeLists.txt  context.c  context.h
